--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -59,5 +59,6 @@ $^\bigstar$To whom correspondence should be addressed: e-mail: \texttt{ishanu@uc
 \def\Appendix{Appendix}
 \def\qnet{Qnet\xspace}
 \def\enet{Emergenet\xspace}
+\def\qdist{E-distance\xspace}
 \def\cov{COVID-19\xspace}
 \def\infl{Influenza A\xspace}
