--- a/tex/Figures/scheme.tex
+++ b/tex/Figures/scheme.tex
@@ -1,6 +1,8 @@
   \begin{tikzpicture}[font=\bf\sffamily\fontsize{8}{9}\selectfont]
   \def\DCOL{MediumBlue!40}
   \def\DCOLx{MediumBlue!40}
+  %\def\DCOL{Red1}
+  %\def\DCOLx{Red1}
   \def\DCOLS{black}
   \def\ECOLA{black!5}
   \def\ECOLB{black!5}
@@ -13,10 +15,10 @@
   \def\OPCA{.95}
   \def\OPCB{.15}
   \def\CIRC{circle}
-  \def\SCALE{.8}
+  \def\SCALE{.80}
   \def\LCOL{black!50}
 \node[anchor=south west] (T) at (0,0) {
-\includegraphics[width=3in]{Figures/e2}};
+\includegraphics[width=3in]{Figures/\EPATH}};
 
 \node[anchor=south west,label={[text=black,align=center,yshift=-.6in,xshift=1.5in]120:{\Large b.} A sample of\\conditional inference trees\\in inferred \enet}] at (T.south east) {
   \begin{tikzpicture}[anchor=center,font=\bf\sffamily\fontsize{8}{8}\selectfont]
@@ -47,19 +49,19 @@
 
  \node[anchor=north,align=left,font=\bf\tt\footnotesize] (N3) at ([yshift=-6.1in,xshift=-1.85in]Z.south) {\bf\sffamily\fontsize{7}{8}\selectfont H1N1 2018\\\bf\sffamily\fontsize{7}{8}\selectfont Haemagglutinin Sequences\\GGAAAACAAAAGCAACAAAA$\cdots$TGA{\large\color{Red1} A}AAAAGA$\cdots$\\AGCAAAAGCAGGGGAAAACA$\cdots $GTT{\large\color{Red1}C}AACCAC$\cdots$\\AGCAAAAGCAGGGGAAAACA$\cdots$GTT{\large\color{Red1}T}AACCAC$\cdots$\\ATGAAGACTATCATTGCTTT$\cdots$ACC{\large\color{Red1}T}TGAGAA$\cdots$};
 
-\node[anchor=west,align=left,font=\bf\sffamily\fontsize{8}{10}\selectfont,label={[align=left,xshift=-.2in]90:$\bigstar$ mixed colors\\represent distributions}] (N4) at ([xshift=.2in,yshift=.05in]N3.east) {A/Italy/7366/2018\\
+\node[anchor=west,align=left,font=\bf\sffamily\fontsize{8}{10}\selectfont,label={[font=\normalfont\itshape\sffamily,align=left,xshift=-.2in]90:$\bigstar$ mixed colors\\represent distributions}] (N4) at ([xshift=.2in,yshift=.05in]N3.east) {A/Italy/7366/2018\\
 A/Baltimore/P0264/2018\\
 A/Baltimore/P0278/2018\\  
 A/Florida/61/2018};
 
-\draw [ultra thick] ([yshift=.25in,xshift=.01in]N4.west) --++ (-.23in,-.19in);
+\draw [ultra thick] ([yshift=.25in,xshift=.01in]N4.west) --++ (-.23in,-.190in);
 \draw [ultra thick] ([yshift=.1in,xshift=.01in]N4.west) --++ (-.23in,-.2in);
  \draw [ultra thick] ([yshift=-0.05in,xshift=.01in]N4.west) --++ (-.23in,-.2in);
  \draw [ultra thick] ([yshift=-.2in,xshift=.01in]N4.west) --++ (-.23in,-.2in);
 
 \draw [-{Latex[length=4mm]},ultra thick,line width=\LWD,Red1] ([xshift=0.55in,yshift=-.2in]N3.north) --++(0,.4in) node [yshift=-.95in,below,align=center,text=IndianRed2] {residue\\at index 1274};
 
-\node[anchor=east,rounded corners=3pt,align=center] (I1) at ([yshift=.9in,xshift=.22in]P1274.west) {Color\\key$^\bigstar$};
+\node[anchor=east,rounded corners=3pt,align=center] (I1) at ([yshift=-.4in,xshift=3.8in]P1274.west) {Color key$^\bigstar$};
 
 \node[font=\bf\sffamily,anchor=north,rounded corners=3pt,text width=.1in,text height=.1in,fill=Purple1,align=center,opacity=\OPC] (I1) at ([yshift=-.05in]I1.south) {T};
 
