--- a/tex/main.tex
+++ b/tex/main.tex
@@ -30,7 +30,8 @@
 \end{center}
 
   {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-Influenza viruses produce  small sequence alterations~\cite{dos2016influenza} every season  that sufficiently perturb surface protein structures to evade host immunity. Such antigenic drifts necessitate periodic innoculation of the population with a  reformulated  vaccine,  targeting the  dominant  strain of the upcoming flu season.  Failing to predict the dominant strain  dramatically reduces  vaccine effectiveness~\cite{tricco2013comparing}, yet the prediction of the dominant strain remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs,  pose the even graver threat of a global  pandemic, and our current ability to  scalably  evaluate the pandemic potential of   individual strains  is limited. In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on viral sequences in the wild, allowing us to predict the likelihood of specific future  mutations, and  yielding the  numerical likelihood of specific  strains emerging via natural evolutionary processes. We show that our forecasts  outperform WHO recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we replicate the  Center for Disease Control's (CDC) Influence Risk Assessment (IRAT) score for the pandemic potential of  \infl  viruses isolated from animal hosts that do not yet circulate in humans. Our  substantial speedup (weeks vs seconds) in  identifying risky strains is potentially key to fully exploiting the  current biosurvellinace capacity via scalably analyzing tens of thousands of strains collected every year, enabling  meaningful preemptive pandemic mitigation strategies. 
+Influenza viruses produce  small sequence alterations~\cite{dos2016influenza} every season  that sufficiently perturb surface protein structures to evade host immunity. % Such antigenic drifts necessitate periodic innoculation of the population with a  reformulated  vaccine,  targeting the  dominant  strain of the upcoming flu season.
+Failing to predict the dominant strain in an upcoming season  dramatically reduces  the  effectiveness of the flu shot~\cite{tricco2013comparing}, yet such prediction remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs,  pose the even graver threat of a global  pandemic, and our current ability to  scalably  evaluate the pandemic potential of   individual strains  is limited. In this study, we introduce a machine learning algorithm to automatically parse out emergent evolutionary constraints using only genomic sequence data. Analyzing sequences for   Hemaglutinnin (HA) and Neuraminidase (NA)  of nearly 100,000 unique \infl  strains from public  databases, our inferred models (\enet{s})  estimate the likelihood of specific future  mutations, ultimately  yielding the  numerical likelihood of specific  strains emerging via natural evolutionary processes. We show that our forecasts  outperform World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we replicate the  Center for Disease Control's (CDC) Influence Risk Assessment (IRAT) score for evaluating  the pandemic potential of  \infl  viruses isolated from animal hosts, particularly ones  that do not yet circulate in humans. Our  substantial speedup (weeks vs seconds) in  identifying risky strains is potentially key to fully exploiting the  current biosurvellinace capacity via scalably analyzing tens of thousands of strains collected every year, thus  enabling  meaningful preemptive pandemic mitigation strategies. 
 }
 
 \vspace{10pt}
@@ -44,8 +45,9 @@ Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small se
   \tikzexternalenable
   \tikzsetnextfilename{scheme}
   \centering
-% \tikzXtrue
-  \iftikzX
+ %\tikzXtrue
+  \iftikzX 
+  \def\EPATH{e2}
   \input{Figures/scheme}
  \else
   \includegraphics[width=\textwidth]{Figures/External/scheme}
@@ -71,16 +73,17 @@ Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small se
 
 While the seasonal flu epidemic is a serious health concern, novel \infl strains spilling over into humans from animal reservoirs pose the even graver threat of a global pandemic. With the memory of sudden emergence of   COVID-19 fresh in our minds, a looimng question  is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens,  thus harboring  a high potential  of triggering the next  pandemic.
 
-To mitigate such risk we must preemptively identify specific strains in animal hosts that do not yet circulate in humans, but   have the potential to  jump to humans, and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collecting wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.
+A possible approach to mitigating such risk is to identify specific strains in animal hosts that do not yet circulate in humans, but   have the potential to spill-over and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collecting wild specimens from diverse hosts and geo-locations, our  current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.
 
 CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elemenst  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of  preempting a pandemic.
 
-
+\DQS{compress thsi desc to state teh key results. Here we are stating what we are doing}
 In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating in the wild, via analyzing sequence variations recorded in publicly available databases, such as the GISAID and NCBI. Uncovering these dependecies enables us  to rapidly rank-order strains isolated in animal hosts according to their pandemic potential. At the core of our algorithmic framework, referred to as the \enet, is a recursive forest of  cross-predicting conditional inference trees, that allows us to  predict the likelihood of specific future  mutations, and  consequently, the numerical likelihood of specific  strains emerging through natural evolutionary processes.
 Evolutionary trajectories in the wild are shaped by complex hard-to-model selection pressures, and the \enet maximally incorporates the impact of these effects by  learning emergent patterns from sequence databases.
 As our first result, we predict dominant strain(s) for the seasonal flu, outperforming  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. This  validates our framework, and  outlines an approach to improve the effectiveness of the flu shot, outperforming  recent proposals using computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
 Importantly, we use only sequence information, but sophisticated pattern recognition allows us to get better predictive performance to what has been reliazed by the state of the art, even with the use of more detailed phenotypic information on past strains.
 
+\DQS{Maybe articulate that we can come close to analytical solution to these probelms, with equations stating what the optimal solution is.}
 Our key outcome, however,  is a validated risk score  to estimate the pandemic potential of novel strains. Our score closely tracks  the IRAT estimate for  \infl  viruses, specifically ones that do not yet circulate in humans, in seconds as opposed to weeks taken by the detailed experimental assays. This dramatic reduction in time and cost potentially opens the door to fully exploiting the  current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence moving towards   meaningful preemptive pandemic mitigation strategies.
 
 {\color{Green1}
@@ -106,7 +109,8 @@ Our key outcome, however,  is a validated risk score  to estimate the pandemic p
  
 
 
-\section*{Brief Methods}
+    \section*{Brief Methods}
+    \DQS{review more craefully phenotypic info used in teh literature and why it is claimed to be necessary in those papers. Why dont we need it}
 A key barrier to making progress  on both the problems cited above, namely predicting the dominant strain(s) in seasonal flu, as well as estimating the numerical odds of an animal strain  to spillover and attain HH capability,  is our limited understanding of the emergent dependencies across individual mutations that  constrain evolutionary trajectories. Thus, to the best of our knowledge, the state of the art has no tools to estimate the numerical likelihood of specific mutations in the future, and in general  the likelihood of a wild strain spontaneously giving rise to another by random chance. Currently, this likelihood is often qualitatively equated to sequence similarity, which is measured by the number of mutations it takes to change one strain to another. However, the odds of one sequence mutating to another is not just a function of how many mutations separate them, but also of how specific mutations incrementally affect fitness. Ignoring the constraints arising from the need to conserve function makes any assessment of the mutation likelihood open to subjective bias. Here, we show that a precise calculation is possible when sequence similarity is evaluated via a new biologically-aware metric, which we call the \textit{q-distance}.
 
 Some recent efforts have recognized this gap, and have attempted to predict future dominant strain by incorporating other phenotypic details. 
