--- a/tex/main.tex
+++ b/tex/main.tex
@@ -77,14 +77,32 @@ A possible approach to mitigating such risk is to identify specific strains in a
 
 CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elemenst  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of  preempting a pandemic.
 
-\DQS{compress thsi desc to state teh key results. Here we are stating what we are doing}
-In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating in the wild, via analyzing sequence variations recorded in publicly available databases, such as the GISAID and NCBI. Uncovering these dependecies enables us  to rapidly rank-order strains isolated in animal hosts according to their pandemic potential. At the core of our algorithmic framework, referred to as the \enet, is a recursive forest of  cross-predicting conditional inference trees, that allows us to  predict the likelihood of specific future  mutations, and  consequently, the numerical likelihood of specific  strains emerging through natural evolutionary processes.
-Evolutionary trajectories in the wild are shaped by complex hard-to-model selection pressures, and the \enet maximally incorporates the impact of these effects by  learning emergent patterns from sequence databases.
-As our first result, we predict dominant strain(s) for the seasonal flu, outperforming  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. This  validates our framework, and  outlines an approach to improve the effectiveness of the flu shot, outperforming  recent proposals using computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
-Importantly, we use only sequence information, but sophisticated pattern recognition allows us to get better predictive performance to what has been reliazed by the state of the art, even with the use of more detailed phenotypic information on past strains.
+\DQS{compress this desc to state the key results. Here we are stating what we are doing}
+
+In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, via analyzing observed variations (point substitutions and indels) in the genomic sequences  of key proteins   implicated  in cellular entry and exit~\cite{gamblin2010influenza} (HA and NA respectively). 
+Uncovering and representing these constraints within a predictive framework, which we call the \enet, allows us to
+estimate the numerical odds of a specific mutation to arise from a given strain  spontaneously in the wild within a given time-period. Explicit quantification of these likelihoods then leads to the  estimation of the probability of a specific strain of interest giving rise to another, where the odds of such ``jumps'' are shaped by the inferred emergent constraints.
+
+It is necessary that a viral strain  has a  sufficiently high replicative fitness for it to be present in sufficiently high numbers in circulation to be  observed in the wild. Thus all sequences deposited in the public  databases, over which our model trains, may be assumed to have high fitness. It follows that the  dependencies between local variations that \enet uncovers arises from a  functional necessity of maintaining high replicative fitness. However,  fitness constraints are not invariant over time especially as the background distribution of strains, and the host immunity changes. With sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these constraints that shape the viral evolutionary trajectories, automatically reflecting the effect of  functional constraints, the impact of constantly evolving host immunity, and the current strain distribution in circulation.  
+
+The ability of the \enet framework to determine the numerical odds of specific sequence variations allows us to frame the problem of forecasting future dominant strain(s), and that of estimating the  pandemic potential of an observed animal strain as precise mathematical questions, with demonstrated approximate solutions (Fig.~\ref{figscheme}). [what are the questions] 1. a dominant strain(s) may be estimated by looking for one  that maximizes the  probability that all currently circulating strains simultaneously and spontaneously give rise to this target strain. 2. the pandemic risk score of a novel strain is high if it has a high likelihood of spilling over to humans and achieve HH transmission capability.
+
+Structurally, the \enet comprises a recursive forest of  cross-dependent predictors: each component predictor aims to model the nucleotide ``outcome'' at a specific positional index, using the sequence entries at other possibly remote parts of the coding sequence as features (Fig.~\ref{figscheme}b); thus yielding a recursive collection of decision trees. These decision trees are %inferred 
+% At the core of our algorithmic framework is a recursive forest of  cross-predicting conditional inference trees, which we refer to as the \enet,  
+inferred purely from the  coding  sequences of the proteins of interest with no additional phenotypic annotation other than identifying the host animal. However, probing the deep emergent interdependencies uncovers a rich structure of constraints that informs how strains can evolve while not  losing replicative fitness. Our modeling approach is a fundamental departure from the state of the art; we do not assume models of mutation, and we make no apriori assumptions that are specific to \infl viral sequences. [describe more here]
+
+
+% that allows us to  predict the likelihood of specific future  mutations, and  consequently, the numerical likelihood of specific  strains emerging through natural evolutionary processes. Evolutionary trajectories in the wild are shaped by complex hard-to-model selection pressures, and the \enet maximally incorporates the impact of these effects by  learning emergent patterns from public sequence databases.
+
+As our first result, we forecast dominant strain(s) for the seasonal flu, outperforming  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. This  validates our framework, and  outlines an approach to improve the effectiveness of the flu shot, outperforming  recent proposals using computational and/or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}.
+We show that the \enet is able to leverage purely sequence information of specific strains, automatically in conjunction with the background distribution of high fitness strains, to  get a substantially  better predictive performance to what has been realized by the state of the art, with and without the use of more detailed phenotypic information~\cite{huddleston2020integrating,neher2014predicting}.
 
 \DQS{Maybe articulate that we can come close to analytical solution to these probelms, with equations stating what the optimal solution is.}
-Our key outcome, however,  is a validated risk score  to estimate the pandemic potential of novel strains. Our score closely tracks  the IRAT estimate for  \infl  viruses, specifically ones that do not yet circulate in humans, in seconds as opposed to weeks taken by the detailed experimental assays. This dramatic reduction in time and cost potentially opens the door to fully exploiting the  current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence moving towards   meaningful preemptive pandemic mitigation strategies.
+
+Our primary claim, however,  is the ability to estimate the pandemic potential of novel strains, via a new risk score which we call the  \erisk.  Our proposed risk score closely tracks  the IRAT estimate for  \infl  viruses, specifically ones that do not yet circulate in humans, in seconds as opposed to weeks taken by the detailed experimental assays. This dramatic reduction in time and cost potentially opens the door to fully exploiting the  current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence moving towards   meaningful preemptive pandemic mitigation strategies.
+
+
+\clearpage 
 
 {\color{Green1}
 
@@ -115,7 +133,7 @@ A key barrier to making progress  on both the problems cited above, namely predi
 
 Some recent efforts have recognized this gap, and have attempted to predict future dominant strain by incorporating other phenotypic details. 
 
-As an applications of the q-distance, we show that we can improve seasonal forecasts for the future dominant circulating strain by learning from the mutational patterns of key surface proteins: Hemaglutinnin (HA) and Neuraminidase (NA) for Influenza A (selected for their known roles in cellular entry and exit~\cite{gamblin2010influenza}). We outperform the WHO's recommendations for the flu-shot composition consistently over past two decades, measured as the number of mutations that separate the predicted from the dominant circulating strain in each season. Our recommendations repeatedly end up closer to the dominant circulating strain, illustrating the potential of our approach to correctly predict evolutionary trajectories. 
+As an applications of the q-distance, we show that we can improve seasonal forecasts for the future dominant circulating strain by learning from the mutational patterns of key surface proteins: Hemaglutinnin (HA) and Neuraminidase (NA) for Influenza A. We outperform the WHO's recommendations for the flu-shot composition consistently over past two decades, measured as the number of mutations that separate the predicted from the dominant circulating strain in each season. Our recommendations repeatedly end up closer to the dominant circulating strain, illustrating the potential of our approach to correctly predict evolutionary trajectories. 
 
 We also show that this new metric allows us to  assess the risk posed by novel strains  effectively and quickly. We compare q-distance results to the CDC's Influenza Risk Assessment Tool (IRAT)~\cite{Influenz24:online}, which gives a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. Our results show strong negative correlations between IRAT emergence risk grades and q-distances to the nearest human strains to the strains in question. However, while IRAT may take weeks to analyze a single strain -- hence the small number of analyzed strains -- q-analysis can be done within milliseconds for each new strain. Moreover, q-analysis only requires sequence data, while IRAT requires information for 10 risk elements, grouped into three categories: 1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiology of the virus~\cite{Influenz24:online}. Thus, our method could potentially be a low-cost, efficient substitute to IRAT, which could used at scale to rank the risk of emergence of non-circulating strains.
 
